force-app/main/default/objects/OKR_Review__c/fields/Review_Dates__c.field-meta.xml
<CustomField>
    <fullName>Review_Dates__c</fullName>
    <label>Review Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>